--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,8 +9,8 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_DB: shalion
-      POSTGRES_USER: shalion_user
-      POSTGRES_PASSWORD: shalion_pass
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - ./docker/init-db:/docker-entrypoint-initdb.d
 
@@ -21,8 +21,8 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/shalion
-      SPRING_DATASOURCE_USERNAME: shalion_user
-      SPRING_DATASOURCE_PASSWORD: shalion_pass
+      SPRING_DATASOURCE_URL: ${DOCKER_DATASOURCE_URL}
+      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
+      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
     depends_on:
       - postgres
