--- a/example.env
+++ b/example.env
@@ -1,4 +1,12 @@
-SPRING_DATASOURCE_URL=jdbc:postgresql://HOST:PORT/shalion
-SPRING_DATASOURCE_USERNAME=USER
-SPRING_DATASOURCE_PASSWORD=PASS
-SPRING_JPA_HIBERNATE_DDL_AUTO=update
+# Database configuration for LOCAL development
+POSTGRES_DB=shalion
+POSTGRES_USER=shalion_user
+POSTGRES_PASSWORD=shalion_pass
+
+# Spring datasource (LOCAL - uses localhost)
+SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/shalion
+SPRING_DATASOURCE_USERNAME=shalion_user
+SPRING_DATASOURCE_PASSWORD=shalion_pass
+
+# Docker datasource (DOCKER - uses postgres service name)
+DOCKER_DATASOURCE_URL=jdbc:postgresql://postgres:5432/shalion
